[package]
name = "leetcode_rs"
version = "0.1.0"
authors = ["yinchu"]
edition = "2018"

[dependencies]
rand = "0.7.2"
util = {path='./crates/util', version = '0.1.0'}
pretty_assertions = "0.6.1"
assert_approx_eq = "1.1.0"

[workspace]
members = [
    "./crates/util",
]

[[bin]]
path = "readme.rs"
name = "readme"
