[package]
name = "leetcode_rs"
version = "0.1.0"
authors = ["yinchu"]
edition = "2018"

[dependencies]
rand = "0.7.2"
util = {path='./crates/util', version = '0.1.0'}
pretty_assertions = "0.6.1"
assert_approx_eq = "1.1.0"
reqwest = {version="0.10.3", features = ["blocking", "json"]}
serde_json = "1.0.48"

[workspace]
members = [
    "./crates/util",
]

