[package]
name = "rustgym"
version = "0.1.0"
authors = ["yinchu"]
edition = "2018"

[features]
default = []

svg = ["gvc"]

[dependencies]
rand = "0.7.3"
pretty_assertions = "0.6.1"
assert_approx_eq = "1.1.0"
reqwest = {version="0.10.3", features = ["blocking", "json"]}
serde_json = "1.0.48"

util = {path='./crates/util', version = '0.1.0'}
testcpp = {path='./crates/testcpp', version = '0.1.0'}
gvc = {path='./crates/gvc', version = '0.1.0', optional = true}

[workspace]
members = [
    "./crates/util",
    "./crates/testcpp",
    "./crates/gvc-sys",
    "./crates/gvc",
]

