[package]
name = "gvc-sys"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
util = {path='../util', version = '0.1.0'}

[build-dependencies]
cc = "1.0.52"
glob = "0.3.0"
pkg-config = "0.3.17"
bindgen = "0.53.2"
regex = "1.3.7"

