[package]
name = "gvc"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gvc-sys = {path='../gvc-sys', version = '0.1.0'}
util = {path='../util', version = '0.1.0'}
