[package]
name = "rustgym-ingest"
version = "0.1.0"
authors = ["Larry Fantasy <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sonic-channel = { version = "0.4.0", features = ["ingest", "control"] }
anyhow = "1.0.38"
diesel = { version = "1.4.8", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "uuidv07"
] }
rustgym-schema = { path = "../schema" }
rustgym-consts = { path = "../consts" }
html2text = "0.2.1"
