[package]
name = "rustgym-leetcode"
version = "0.1.0"
authors = ["Larry Fantasy <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rustgym-util = { path = "../util" }
rand = "0.7.3"
assert_approx_eq = "1.1.0"
paste = "1.0.3"
pretty_assertions = "0.7.2"
threadpool = "1.8.1"
