[package]
name = "metaldnn-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
block = "0.1.6"
objc = { version = "0.2.7", features = ["objc_exception"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.59.1"
