[package]
name = "rustgym-mnist-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
bincode = "1.3.3"
curl = "0.4.38"
flate2 = "1.0.22"
serde = { version = "1.0.130", features = ["derive"] }
