[package]
name = "mnist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
metaldnn = { path = "../metaldnn" }
rustgym-mnist-data = { path = "../mnist-data" }
winit = "0.25.0"
objc = { version = "0.2.7", features = ["objc_exception"] }
gilrs = "0.8.1"
png = "0.17.2"

[lib]
name = "mnist"
crate-type = ["staticlib"]
