[package]
name = "rustgym-msg"
version = "0.1.0"
authors = ["Larry Fantasy <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
uuid = { version = "0.8", features = ["serde", "v4"] }
derive-new = "0.5.8"
uaparser = "0.4.0"
