[package]
name = "openvgdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
md5 = "0.7.0"
diesel = { version = "1.4.8", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "uuidv07"
] }
rustgym-consts = { path = "../consts" }
rustgym-schema = { path = "../schema" }
