[package]
name = "rustgym-readme"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde_json = "1.0.60"
anyhow = "1.0.35"
diesel = { version = "1.4.5", features = ["sqlite"] }
rustgym-util = { path = "../util" }
rustgym-schema = { path = "../schema" }
rustgym-consts = { path = "../consts" }
walkdir = "2.3.1"
regex = "1.4.2"
