[package]
name = "rustgym-readme"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.35"
askama = "0.10.5"
derive-new = "0.5.8"
regex = "1.4.2"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
rustgym-consts = { path = "../consts" }
rustgym-schema = { path = "../schema" }
rustgym-util = { path = "../util" }
serde_json = "1.0.60"
walkdir = "2.3.1"
diesel = { version = "1.4.8", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "uuidv07"
] }
