[package]
name = "rustgym"
version = "0.1.7"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "rustgym solutions"
repository = "https://github.com/warycat/rustgym"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rustgym-testcpp", "rustgym-gvc"]

[dependencies]
rand = "0.7.3"
pretty_assertions = "0.6.1"
assert_approx_eq = "1.1.0"

rustgym-util = {path='../util', version = '0.1.0'}
rustgym-testcpp = {path='../testcpp', version = '0.1.0',optional = true}
rustgym-gvc = {path='../gvc', version = '0.1.0', optional = true}

[package.metadata.docs.rs]
no-default-features = true
