[package]
name = "rustgym"
version = "0.2.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "rustgym solutions"
repository = "https://github.com/warycat/rustgym"
readme = "../README.md"

[package.metadata.docs.rs]
no-default-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
rand = "0.7.3"
pretty_assertions = "0.6.1"
assert_approx_eq = "1.1.0"
rustgym-util = { path = "../util" }
