[package]
name = "rustgym-schema"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4.8", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "uuidv07"
] }
rustgym-consts = { path = "../consts" }
serde = "1.0.118"
derive-new = "0.5.8"
regex = "1.4.2"
