[package]
name = "rustgym-server"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
diesel = { version = "1.4.5", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "uuidv07"
] }
rustgym-schema = { path = "../schema" }
rustgym-consts = { path = "../consts" }
rustgym-characters = { path = "../characters" }
rustgym-message = { path = "../message" }
r2d2 = "0.8.9"
uuid = "0.8.1"
serde = "1.0.118"
chrono = "0.4.19"
anyhow = "1.0.35"
futures = "0.3.8"
failure = "0.1.8"
lazy_static = "1.4.0"
askama = "0.10.5"
derive-new = "0.5.8"
rand = "0.8.1"
actix-session = "0.4.0"
log = "0.4.13"
env_logger = "0.8.2"
actix-files = "0.5.0"
actix = "0.10.0"
actix-web-actors = "3.0.0"
serde_json = "1.0.61"
