[package]
name = "rustgym-server"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-service = "1.0.6"
actix-session = "0.4.0"
actix-web = "3"
actix-web-actors = "3.0.0"
anyhow = "1.0.38"
askama = "0.10.5"
chrono = "0.4.19"
derive-new = "0.5.8"
env_logger = "0.8.2"
failure = "0.1.8"
futures = "0.3.8"
futures-util = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.13"
r2d2 = "0.8.9"
rand = "0.8.1"
rustgym-characters = { path = "../characters" }
rustgym-consts = { path = "../consts" }
rustgym-msg = { path = "../msg" }
rustgym-schema = { path = "../schema" }
serde = "1.0.118"
serde_json = "1.0.61"
sonic-channel = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
uaparser = "0.4.0"
notify = "4.0.16"
bincode = "1.3.3"
ring = "0.16.20"
data-encoding = "2.3.2"
openssl = { version = "0.10.48", features = ["vendored"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel = { version = "1.4.8", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "uuidv07"
] }
