[package]
name = "rustgym-testcpp"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "rustgym cpp solutions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.52"
glob = "0.3.0"
pkg-config = "0.3.17"


