[package]
name = "rustgym-tfrs"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tfrs-sys = { path = "../tfrs-sys" }
log = "0.4.14"
env_logger = "0.9.0"
