[package]
name = "rustgym-tfrs"
version = "0.1.0"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tfrs-sys = { path = "../tfrs-sys" }
log = "0.4.14"
env_logger = "0.9.0"
csv = "1.1.6"
serde = { version = "1.0.127", features = ["derive"] }
rand = "0.8.4"
rand_distr = "0.4.1"
float-cmp = "0.9.0"
