[package]
name = "rustgym-wasm"
version = "0.1.0"
authors = ["Larry Fantasy <larry.fantasy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rustgym-msg = { path = "../msg" }
rustgym-consts = { path = "../consts" }
wasm-bindgen-futures = "0.4.24"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
js-sys = "0.3.51"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.51", features = [
    "RtcIceCandidateInit",
    "RtcSignalingState",
    "RtcIceGatheringState",
    "RtcIceConnectionState",
    "InputEvent",
    "MouseEvent",
    "HtmlAnchorElement",
    "HtmlTableCellElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTableElement",
    "Node",
    "HtmlCollection",
    "Element",
    "DomTokenList",
    "HtmlDivElement",
    "Window",
    "RtcDataChannelEvent",
    "RtcTrackEvent",
    "RtcSignalingState",
    "RtcIceCandidate",
    "RtcPeerConnectionIceEvent",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "MediaTrackConstraints",
    "MediaCapabilities",
    "RtcRtpTransceiver",
    "RtcSessionDescription",
    "RtcConfiguration",
    "RtcRtpReceiver",
    "RtcDataChannel",
    "RtcRtpSender",
    "RtcRtpEncodingParameters",
    "MediaStreamTrack",
    "RtcStatsReport",
    "RtcIceTransportPolicy",
    "RtcIceServer",
    "RtcPeerConnection",
    "SourceBufferAppendMode",
    "SourceBuffer",
    "MediaTrackSupportedConstraints",
    "MediaRecorderOptions",
    "HtmlVideoElement",
    "BlobEvent",
    "RecordingState",
    "MediaRecorder",
    "MediaSource",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaDevices",
    "Navigator",
    "Window",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Location",
    "HtmlInputElement",
    "Document",
    "KeyboardEvent",
] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
anyhow = "1.0.41"
bincode = "1.3.3"
wasm-bindgen-test = "0.3.24"
webrtc-sdp = "0.3.8"
lazy_static = "1.4.0"
derive-new = "0.5.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
