[package]
authors = ["Larry Fantasy <larry.fantasy@gmail.com>"]
edition = "2018"
name = "rustgym-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.41"
bincode = "1.3.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
derive-new = "0.5.8"
js-sys = "0.3.51"
lazy_static = "1.4.0"
rustgym-consts = { path = "../consts" }
rustgym-msg = { path = "../msg" }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-test = "0.3.24"
web-sys = { version = "0.3.51", features = [
    "BinaryType",
    "Blob",
    "BlobEvent",
    "CanvasRenderingContext2d",
    "Document",
    "DomTokenList",
    "Element",
    "ErrorEvent",
    "FileReader",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlTableCellElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaCapabilities",
    "MediaDevices",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaSource",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "MediaTrackSupportedConstraints",
    "MessageEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "ProgressEvent",
    "RecordingState",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcIceServer",
    "RtcIceTransportPolicy",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcRtpEncodingParameters",
    "RtcRtpReceiver",
    "RtcRtpSender",
    "RtcRtpTransceiver",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSignalingState",
    "RtcSignalingState",
    "RtcStatsReport",
    "RtcTrackEvent",
    "SourceBuffer",
    "SourceBufferAppendMode",
    "WebSocket",
    "Window",
    "Window",
] }
webrtc-sdp = "0.3.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
