[package]
authors = ["Larry Fantasy <larry.fantasy@gmail.com>"]
edition = "2018"
name = "rustgym-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nes = { path = "../nes" }
anyhow = "1.0.41"
bincode = "1.3.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
derive-new = "0.5.8"
js-sys = "0.3.51"
lazy_static = "1.4.0"
log = "0.4.14"
md5 = "0.7.0"
rustgym-consts = { path = "../consts" }
rustgym-msg = { path = "../msg" }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-test = "0.3.24"
web-sys = { version = "0.3.51", features = [
    "BinaryType",
    "Blob",
    "BlobEvent",
    "CanvasRenderingContext2d",
    "ConstrainLongRange",
    "CssStyleDeclaration",
    "Document",
    "DomTokenList",
    "Element",
    "EventListener",
    "ErrorEvent",
    "FileReader",
    "Gamepad",
    "GamepadButton",
    "GamepadMappingType",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlLiElement",
    "HtmlParagraphElement",
    "HtmlTableCellElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaCapabilities",
    "MediaDevices",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaSource",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "MediaTrackSupportedConstraints",
    "MessageEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "Performance",
    "ProgressEvent",
    "RecordingState",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcIceServer",
    "RtcIceTransportPolicy",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcRtpEncodingParameters",
    "RtcRtpReceiver",
    "RtcRtpSender",
    "RtcRtpTransceiver",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSignalingState",
    "RtcSignalingState",
    "RtcStatsReport",
    "RtcTrackEvent",
    "SourceBuffer",
    "SourceBufferAppendMode",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlContextAttributes",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "WebSocket",
    "Window",
] }
webrtc-sdp = "0.3.8"
png = "0.17.2"
rand = "0.8.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
